ajout des image, genre et synopsis

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 <body>
 
     <h1>CedFlix Prime+</h1>
-    <section class="search">
+    <section class="searchSection">
         <label for="search"></label>
-        <input type="search" name="q" placeholder="Rechercher" />
+        <input id="search" type="search" name="q" placeholder="Rechercher" />
     </section>
 
-    <section class="cedFlix"></section>
+    <section class="cedFlix">
+
+    </section>
 
 
 
