--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 
 <body>
+    <main>
+        <h1>CedFlix Prime+</h1>
+        <section class="searchSection">
+            <label for="search"></label>
+            <input id="search" type="search" name="q" placeholder="Rechercher" />
+        </section>
 
-    <h1>CedFlix Prime+</h1>
-    <section class="searchSection">
-        <label for="search"></label>
-        <input id="search" type="search" name="q" placeholder="Rechercher" />
-    </section>
+        <section class="cedFlix">
 
-    <section class="cedFlix">
-
-    </section>
-
+        </section>
+    </main>
 
 
     <script src="script.js"></script>
